Bug 1089370 - Don't null-check a reference in nsContentUtils::CreateContextualFragment; r=jst This triggers an undefined-bool-conversion warning in recent LLVM. The dereference is safe because nsAutoTArray is infallible.